ghidra_trust_vector.txt
INFO  Using log config file: jar:file:/D:/LeagueOfLegendsV2/ghidra_full/ghidra_11.3.2_PUBLIC/Ghidra/Framework/Generic/lib/Generic.jar!/generic.log4j.xml (LoggingInitialization)  
INFO  Using log file: C:\Users\loicd\AppData\Roaming\ghidra\ghidra_11.3.2_PUBLIC\application.log (LoggingInitialization)  
INFO  Loading user preferences: C:\Users\loicd\AppData\Roaming\ghidra\ghidra_11.3.2_PUBLIC\preferences (Preferences)  
INFO  Searching for classes... (ClassSearcher)  
INFO  Class search complete (687 ms) (ClassSearcher)  
INFO  Initializing SSL Context (SSLContextInitializer)  
INFO  Initializing Random Number Generator... (SecureRandomFactory)  
INFO  Random Number Generator initialization complete: SHA1PRNG (SecureRandomFactory)  
INFO  Trust manager disabled, cacerts have not been set (ApplicationTrustManagerFactory)  
INFO  Headless startup complete (1958 ms) (AnalyzeHeadless)  
INFO  Class searcher loaded 57 extension points (18 false positives) (ClassSearcher)  
INFO  HEADLESS Script Paths:
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\8051\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\DATA\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\WildcardAssembler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\PIC\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Debug\Debugger-rmi-trace\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\GnuDemangler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\FunctionID\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\BytePatterns\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\BSim\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Base\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\MicrosoftCodeAnalyzer\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Jython\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Debug\Debugger\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\SwiftDemangler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\PDB\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\SystemEmulation\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\DecompilerDependent\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\FileFormats\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\PyGhidra\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\VersionTracking\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Decompiler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\Atmel\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\JVM\ghidra_scripts (HeadlessAnalyzer)  
INFO  HEADLESS: execution starts (HeadlessAnalyzer)  
INFO  Opening existing project: D:\LeagueOfLegendsV2\ghidra_proj2 (HeadlessAnalyzer)  
INFO  Opening project: D:\LeagueOfLegendsV2\ghidra_proj2 (HeadlessProject)  
INFO  REPORT: Processing project file: /League of Legends.exe (HeadlessAnalyzer)  
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                         ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                           ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                                          ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                                                            ^
skipping D:\LeagueOfLegendsV2\ghidra_scripts\ReadSBox.java
INFO  SCRIPT: D:\LeagueOfLegendsV2\ghidra_scripts\FindTrustVector.java (HeadlessAnalyzer)  
INFO  FindTrustVector.java> === Xrefs to FUN_1410fbdc0 (cert vector builder) === (GhidraScript)  
INFO  FindTrustVector.java>   From 14072c26c in FUN_14072c1f0 at 14072c1f0 size=1685 (GhidraScript)  
INFO  FindTrustVector.java>   Lines: 297 (GhidraScript)  
INFO  FindTrustVector.java>      (GhidraScript)  
INFO  FindTrustVector.java>     /* WARNING: Globals starting with '_' overlap smaller symbols at the same address */ (GhidraScript)  
INFO  FindTrustVector.java>      (GhidraScript)  
INFO  FindTrustVector.java>     void FUN_14072c1f0(undefined8 *param_1,undefined8 param_2,undefined8 param_3) (GhidraScript)  
INFO  FindTrustVector.java>      (GhidraScript)  
INFO  FindTrustVector.java>     { (GhidraScript)  
INFO  FindTrustVector.java>       longlong *plVar1; (GhidraScript)  
INFO  FindTrustVector.java>       longlong *plVar2; (GhidraScript)  
INFO  FindTrustVector.java>       code *pcVar3; (GhidraScript)  
INFO  FindTrustVector.java>       longlong lVar4; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 uVar5; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 *puVar6; (GhidraScript)  
INFO  FindTrustVector.java>       longlong lVar7; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 *puVar8; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong uVar9; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong uVar10; (GhidraScript)  
INFO  FindTrustVector.java>       undefined1 auStackY_178 [32]; (GhidraScript)  
INFO  FindTrustVector.java>       longlong local_148; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 uStack_140; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 local_138; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong uStack_130; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong local_128; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 uStack_120; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 local_118; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong uStack_110; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong local_108; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 uStack_100; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 local_f8; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong uStack_f0; (GhidraScript)  
INFO  FindTrustVector.java>       undefined1 local_e8; (GhidraScript)  
INFO  FindTrustVector.java>       longlong local_e0; (GhidraScript)  
INFO  FindTrustVector.java>       longlong local_d8; (GhidraScript)  
INFO  FindTrustVector.java>       longlong lStack_d0; (GhidraScript)  
INFO  FindTrustVector.java>       undefined1 local_c8; (GhidraScript)  
INFO  FindTrustVector.java>       char *local_c0; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 uStack_b8; (GhidraScript)  
INFO  FindTrustVector.java>       undefined8 local_b0; (GhidraScript)  
INFO  FindTrustVector.java>       ulonglong local_a8; (GhidraScript)  
INFO  FindTrustVector.java>       longlong local_a0; (GhidraScript)  
INFO  FindTrustVector.java>       longlong local_98; (GhidraScript)  
INFO  FindTrustVector.java> 
=== DONE === (GhidraScript)  
INFO  REPORT: Save succeeded for processed file: /League of Legends.exe (HeadlessAnalyzer)  
